--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "aos": "^3.0.0-beta.6",
         "framer-motion": "^6.2.8",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.2"
     },
     "devDependencies": {
+        "@types/aos": "^3.0.4",
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
         "@types/styled-components": "^5.1.24",
