--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^2.8.3",
         "aos": "^3.0.0-beta.6",
+        "emailjs-com": "^3.2.0",
         "framer-motion": "^6.2.8",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.2.2"
+        "react-hook-form": "^7.19.3",
+        "react-router-dom": "^6.2.2",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/aos": "^3.0.4",
