--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.19.3",
         "react-router-dom": "^6.2.2",
+        "sweetalert": "^2.1.2",
         "yup": "^0.32.11"
     },
     "devDependencies": {
