--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "devDependencies": {
         "@types/aos": "^3.0.4",
+        "@types/node": "^17.0.23",
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
         "@types/styled-components": "^5.1.24",
