--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "emailjs-com": "^3.2.0",
         "framer-motion": "^6.2.8",
         "react": "^17.0.2",
+        "react-background-slider": "^2.0.0",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.19.3",
         "react-router-dom": "^6.2.2",
